crates/plugin/src/render/snapshots/zj_radar_plugin__render__tests__background_task_lines_crowded_grid.snap
---
source: crates/plugin/src/render/tests.rs
assertion_line: 2910
expression: "grid(&raw, 32)"
---
 RADAR                        ·1
◆═══════════════════════════════
▌⠋ 1 zj-radar
▌└ ⋯ ✳ fix the flaky e2e retries
▌  ┊ ⠋ unit · 4m
▌  ┊ ✗ lint · 2m
▌  ┊ +2 more
