crates/plugin/src/render/snapshots/zj_radar_plugin__render__tests__background_task_lines_single_grid.snap
---
source: crates/plugin/src/render/tests.rs
expression: "grid(&raw, 32)"
---
 RADAR                        ·1
◆═══════════════════════════════
▌⠋ 1 zj-radar
▌└ ⋯ ✳ fix the flaky e2e retries
▌  ┊ ⠋ Run the full integr… · 4m
▌  ┊ ✗ lint · 2m
▌  ┊ +2 more
