crates/plugin/src/render/snapshots/zj_radar_plugin__render__tests__canonical_tint_map.snap
---
source: crates/plugin/src/render/tests.rs
assertion_line: 3885
expression: tint_map(&raw)
---
rail
active
agent
rail
agent
rail
agent
rail
idle
rail
