crates/plugin/src/render/snapshots/zj_radar_plugin__render__tests__cards_light_theme_grid.snap
---
source: crates/plugin/src/render/tests.rs
assertion_line: 4009
expression: "grid(&raw, 30)"
---
 RADAR                   ·4 1!
▌⠋ 1 web
▌└ ⠋ ✳ building…

 ◆ 2 api

 ● 3 worker

 ○ 4 notes
