crates/plugin/src/render/snapshots/zj_radar_plugin__render__tests__cards_light_theme_tint.snap
---
source: crates/plugin/src/render/tests.rs
expression: "tint_map_for(&raw, &light)"
---
rail
active
active
rail
agent
rail
agent
rail
idle
rail
