crates/plugin/src/render/snapshots/zj_radar_plugin__render__tests__cards_multi_pane_grid.snap
---
source: crates/plugin/src/render/tests.rs
assertion_line: 3281
expression: "grid(&raw, 30)"
---
 RADAR                      ·1
▌◆ 1 team
▌├ ⠋ ✳ building
▌├ ◆ ❉ approve?
▌└ ● ⚗ cargo test
